Solved the flicker on the start of display panel

--- a/src/content/display/style/display.styl
+++ b/src/content/display/style/display.styl
@@ -1,3 +1,6 @@
+@import 'result.styl';
+@import 'loading.styl';
+@import 'error.styl';
 /*
  * style of translation result panel
  */
@@ -15,13 +18,12 @@ transparent-color = rgba(255,255,255,0);
 	z-index: 10000000 !important;
 }
 
-#edge-translate-panel{	
-	display: none;		
+#edge-translate-panel{		
     position: fixed;	
     top: 0;    
     box-sizing: border-box;    
-    z-index: 10000000;    
-    // display: flex;
+    z-index: 10000000;        
+	display: flex;		
 	flex-direction: column;
 	flex-wrap: nowrap;
 	justify-content: flex-start;
